Fix too big icons of social services (#303)

--- a/theme/shared/browser/browser.css
+++ b/theme/shared/browser/browser.css
@@ -626,7 +626,7 @@ menuitem:not([type]):not(.menuitem-tooltip):not(.menuitem-iconic-tooltip) {
 
 toolbarbutton.badged-button > .toolbarbutton-badge-container > .toolbarbutton-icon,
 toolbarbutton[type="socialmark"] > .toolbarbutton-icon {
-  max-width: 32px !important;
+  max-width: 16px !important;
 }
 
 /* Help SDK icons fit: */
